--- a/common/dtft.tex
+++ b/common/dtft.tex
@@ -52,7 +52,7 @@ of a sequence $\seqxZ{x_n}$ in $\spllR$.
   }
 \end{proposition}
 \begin{proof}
-\begin{align}
+\begin{align*}
    \Dx\brp{\omega+2\pi n}
      & = \sum_{m\in\Z} x_m e^{-i \left(\omega+2\pi n\right)m}
      &&= \sum_{m\in\Z} x_m e^{-i\omega m} \cancelto{1}{e^{-i2\pi nm}} \nonumber
@@ -65,7 +65,118 @@ of a sequence $\seqxZ{x_n}$ in $\spllR$.
 %     &&= \sum_{m\in\Z} g_m e^{-i\omega m}  \nonumber
 %     &&= \Fh(\omega) \label{equ:qc1}
 %   \\&=  \Fg(\omega) \label{equ:psi_qc1}
-\end{align}
+\end{align*}
+\end{proof}
+
+%--------------------------------------
+\begin{theorem}
+\label{thm:dtft_conjneg}
+%--------------------------------------
+Let $\Dx(\omega)\eqd\opDTFT\brs{\seqn{\fx[n]}}(\omega)$ be the \fncte{discrete-time Fourier transform} \xref{def:dtft}
+of a sequence $\seqxZ{x_n}$ in $\spllR$.
+\thmbox{
+  \brb{\begin{array}{>{\ds}rc>{\ds}l}
+    \Fx(\omega) &\eqd& \opDTFT\seqn{\fx[n]}
+    %\\\mc{3}{F}{(\ope{DTFT})}
+    %\\\mc{3}{M}{\xref{def:dtft}}
+  \end{array}}
+  \quad\implies\quad
+  \brb{\begin{array}{F>{\ds}rc>{\ds}lD}
+      (1).&\opDTFT\seqn{\fx      [-n]} &=& \Fx      (-\omega) & and
+    \\(2).&\opDTFT\seqn{\fx^\conj[ n]} &=& \Fx^\conj(-\omega) & and
+    \\(3).&\opDTFT\seqn{\fx^\conj[-n]} &=& \Fx^\conj( \omega) & 
+  \end{array}}
+  }
+\end{theorem}
+\begin{proof}
+\begin{align*}
+  \opDTFT\seqn{\fx[-n]}
+    &\eqd \sum_{n\in\Z} \fx[-n] e^{-i\omega n}
+    && \text{by definition of \ope{DTFT}}
+    && \text{\xref{def:dtft}}
+  \\&= \sum_{m\in\Z} \fx[m] e^{i\omega m}
+     && \text{where $m\eqd-n$ $\implies$ $n=-m$}
+  \\&= \sum_{m\in\Z} \fx[m] e^{-i(-\omega)m}
+  \\&\eqd \Fx(-\omega)
+    && \text{by left hypothesis}
+    \\
+    \\
+  \opDTFT\seqn{\fx^\conj[n]}
+    &\eqd \sum_{n\in\Z} \fx^\conj[n] e^{-i\omega n}
+    && \text{by definition of \ope{DTFT}}
+    && \text{\xref{def:dtft}}
+  \\&= \brp{\sum_{n\in\Z} \fx[n] e^{i\omega n}}^\conj
+     && \text{by \prope{distributive} property of \structd{$\invo$-algebra}s}
+     && \text{\xref{def:staralg}}
+  \\&= \brp{\sum_{n\in\Z} \fx[n] e^{-i(-\omega)n}}^\conj
+  \\&\eqd \Fx^\conj(-\omega)
+    && \text{by left hypothesis}
+    \\
+    \\
+  \opDTFT\seqn{\fx^\conj[-n]}
+    &\eqd \sum_{n\in\Z} \fx^\conj[-n] e^{-i\omega n}
+    && \text{by definition of \ope{DTFT}}
+    && \text{\xref{def:dtft}}
+  \\&= \brp{\sum_{n\in\Z} \fx[-n] e^{i\omega n}}^\conj
+     && \text{by \prope{distributive} property of \structd{$\invo$-algebra}s}
+     && \text{\xref{def:staralg}}
+  \\&= \brp{\sum_{m\in\Z} \fx[m] e^{-i\omega m}}^\conj
+     && \text{where $m\eqd-n$ $\implies$ $n=-m$}
+  \\&\eqd \Fx^\conj(\omega)
+    && \text{by left hypothesis}
+\end{align*}
+\end{proof}
+
+%--------------------------------------
+\begin{theorem}
+\label{thm:dtft_conjneg_real}
+%--------------------------------------
+Let $\Dx(\omega)\eqd\opDTFT\brs{\seqn{\fx[n]}}(\omega)$ be the \fncte{discrete-time Fourier transform} \xref{def:dtft}
+of a sequence $\seqxZ{\fx[n]}$ in $\spllR$.
+\thmbox{
+  \brb{\begin{array}{FMD}
+      (1).&$\Fx(\omega) \eqd \opDTFT\seqn{\fx[n]}$ & and
+    \\(2).&$\seqn{\fx[n]}$ is \prope{real-valued}
+  \end{array}}
+  \quad\implies\quad
+  \brb{\begin{array}{F>{\ds}rc>{\ds}lc>{\ds}lD}
+      (1).&\opDTFT\seqn{\fx      [-n]} &=& \Fx      (-\omega) & &              & and
+    \\(2).&\opDTFT\seqn{\fx^\conj[ n]} &=& \Fx^\conj(-\omega) &=& \Fx( \omega) & and
+    \\(3).&\opDTFT\seqn{\fx^\conj[-n]} &=& \Fx^\conj( \omega) &=& \Fx(-\omega) & 
+  \end{array}}
+  }
+\end{theorem}
+\begin{proof}
+\begin{align*}
+  \opDTFT\seqn{\fx[-n]}
+    &\eqd \sum_{n\in\Z} \fx[-n] e^{-i\omega n}
+    && \text{by definition of \ope{DTFT}}
+    && \text{\xref{def:dtft}}
+  \\&= \sum_{m\in\Z} \fx[m] e^{i\omega m}
+     && \text{where $m\eqd-n$ $\implies$ $n=-m$}
+  \\&= \sum_{m\in\Z} \fx[m] e^{-i(-\omega)m}
+  \\&\eqd \Fx(-\omega)
+    && \text{by left hypothesis}
+    \\
+    \\
+  \boxed{\Fx^\conj(-\omega)}
+    &= \boxed{\opDTFT\seqn{\fx^\conj[n]}}
+    && \text{by \prefp{thm:dtft_conjneg}}
+  \\&= \opDTFT\seqn{\fx[n]}
+    && \text{by \prope{real-valued} hypothesis}
+  \\&= \boxed{\Fx(\omega)}
+    && \text{by definition of $\Fx(\omega)$}
+    && \text{\xref{def:dtft}}
+    \\
+    \\
+  \boxed{\Fx^\conj( \omega)}
+    &= \boxed{\opDTFT\seqn{\fx^\conj[-n]}}
+    && \text{by \prefp{thm:dtft_conjneg}}
+  \\&= \opDTFT\seqn{\fx[-n]}
+    && \text{by \prope{real-valued} hypothesis}
+  \\&= \boxed{\Fx(-\omega)}
+    && \text{by result (1)}
+\end{align*}
 \end{proof}
 
 \begin{center}
