--- a/common/randseq.tex
+++ b/common/randseq.tex
@@ -242,7 +242,7 @@ Let $\rvx(n)$ be a \fncte{random sequence} with \fncte{mean} $\pmeanx(n)$ and
 \begin{definition}
 \footnote{
   \citerpgc{papoulis1984}{263}{0070484686}{``$R_{xy}(\tau)=E\brb{\rvx(t+\tau)\rvy^\ast(t)}$"},
-  \citerpgc{kay1988}{52}{8131733564}{``$r_{xy}[k] = \mfrakE\brb{x^\ast[n]y[n+k]}\quad(3.42)"$},
+  \citerpgc{kay1988}{52}{8131733564}{``$r_{xy}[k] = \mathcal{E}\brb{x^\ast[n]y[n+k]}\quad(3.42)"$},
   \citerpgc{bendat2011}{111}{1118210824}{$R_{xy}(\tau)=E\brs{\rvx(t)\rvy(t+\tau)}$},
   \citerpgc{cadzow}{341}{0023180102}{$r_{xy}(n)=E\brs{\rvx(k+n)\rvy^\ast(k)}$ (10.41)}
   %\citerpgc{koopmans1995}{}{{0124192513}{}
@@ -292,7 +292,8 @@ $\pmeanx(n)$, $\pvarx(n)$, $\Rxx(n,m)$, and $\Rxy(n,m)$ \xref{def:Rxynm}.
 
 %---------------------------------------
 \begin{corollary}
-\label{cor:Rxx}
+\label{cor:Rxxm}
+\label{cor:Rxym}
 %---------------------------------------
 Let $\rvy(n)$ be a \fncte{random process},
     $\rvx(n)$    a \fncte{random sequence} with \fncte{autocorrelation} $\Rxx(n,m)$,
@@ -304,8 +305,8 @@ and $\Rxy$    the \fncte{cross-correlation} of $\rvx$ and $\rvy$.
   \end{array}}
   \implies
   \brb{\begin{array}{rclD}
-    \Rxx(m) &=& \Rxx^\ast(-m) & (\prope{conjugate symmetric})\\
-    \Rxy(m) &=& \Ryx^\ast(-m)
+    \Rxx(m) &=& \Rxx     (-m) & (\prope{symmetric})\\
+    \Rxy(m) &=& \Ryx^\ast(-m) & (\prope{conjugate symmetric})
   \end{array}}
 }
 \end{corollary}
@@ -336,6 +337,8 @@ and $\Rxy$    the \fncte{cross-correlation} of $\rvx$ and $\rvy$.
    \\&= \brlr{\Ryx^\ast(-m)}_{y=x}
      && \text{by previous result}
    \\&= \Rxx^\ast(-m)
+   \\&= \Rxx(-m)
+     && \text{because \prope{real-valued}}
 \end{align*}
 \end{proof}
 
@@ -608,42 +611,66 @@ In the literature, there are varying and in general incompatible definitions of
 \fncte{cross-correlation} functions $\Rxy(n,m)$ and $\Rxy(m)$ \xxref{def:Rxynm}{def:Rxym}.
 The choice of definitions has consequences for results involving $\Swxy$ \xref{cor:Swxy}.
 Here is a very limited overview:
-\\\indentx$\begin{array}{>{\qquad}cNM>{\ds}l}
-  \mc{4}{M}{References that put conjugate $\conj$ on $\rvy$:}
-  \\&\imark&\citerpg{papoulis1984}{263}{0070484686} & R_{xy}(m)=E\brb{\rvx(m)\rvy^\ast(0)}
-  \\&\imark&\citerpg{cadzow}{341}{0023180102}       & r_{xy}(m)=E\brs{\rvx(m)\rvy^\ast(0)}
+\\\indentx$\begin{array}{>{\qquad}cNM>{\ds}rc>{\ds}l}
+  \mc{6}{M}{References that put conjugate $\conj$ on $\rvy$:}
+  \\&\imark&\citerpg{papoulis1984}{263}{0070484686} & R_{xy}(m) &=& E\brb{\rvx(m)\rvy^\ast(0)}
+  \\&\imark&\citerpg{cadzow}{341}{0023180102}       & r_{xy}(m) &=& E\brs{\rvx(m)\rvy^\ast(0)}
   \\
-  \mc{4}{M}{References that put conjugate $\conj$ on $\rvx$:}
-  \\&\imark&\citerpg{kay1988}{52}{8131733564}       & r_{xy}[m] = \mfrakE\brb{x^\ast[0]y[m]}
-  \\&\imark&\citerpg{weisstein2002}{594}{1420035223}& f\star g=\int_{-\infty}^{\infty}\bar{f}(\tau)g(t+\tau)\dtau
+  \mc{6}{M}{References that put conjugate $\conj$ on $\rvx$:}
+  \\&\imark&\citerpg{kay1988}{52}{8131733564}       & r_{xy}[m] &=& \mathcal{E}\brb{x^\ast[0]y[m]}
+  \\&\imark&\citerpg{weisstein2002}{594}{1420035223}& f\star g  &=& \int_{-\infty}^{\infty}\bar{f}(\tau)g(t+\tau)\dtau
  %\\&\imark&Bracewell 1965   pages  46,243          & \text{same as Weisstein?  cited by other reference} % https://books.google.com/books?id=oVFTDwAAQBAJ&pg=PA92&dq=bracewell+%22pentagram+notation%22&hl=en&sa=X&ved=0ahUKEwigptTEq-DeAhXIi60KHd1RCJIQ6AEILjAB#v=onepage&q=bracewell%20%22pentagram%20notation%22&f=false
  %\\&\imark&\citerp {bracewell1965}{46,243}         & same as Weisstein?  %{cited by other reference} % https://books.google.com/books?id=oVFTDwAAQBAJ&pg=PA92&dq=bracewell+%22pentagram+notation%22&hl=en&sa=X&ved=0ahUKEwigptTEq-DeAhXIi60KHd1RCJIQ6AEILjAB#v=onepage&q=bracewell%20%22pentagram%20notation%22&f=false
   \\
-  \mc{4}{M}{References that use no conjugate $\conj$ (e.g. when using \prope{real-valued} random sequences:}
-  \\&\imark&\citerpg{bendat2011}{111}{1118210824}   & R_{xy}(m)=E\brs{\rvx(0)\rvy(m)}
-  \\&\imark&\citerpg{helstrom1991}{369}{0023535717} & \Rxy(t_1,t_2) = E[\rvx(t_1)\rvy(t_2)]
+  \mc{6}{M}{References that use no conjugate $\conj$ (e.g. when using \prope{real-valued} random sequences:}
+  \\&\imark&\citerpg{bendat2011}{111}{1118210824}   & R_{xy}(m)            &=& E\brs{\rvx(0)\rvy(m)}
+  \\&\imark&\citerpg{helstrom1991}{369}{0023535717} & \Rxy(t_1,t_2)        &=& E[\rvx(t_1)\rvy(t_2)]
+  \\&\imark&\citerpg{proakis1996}{A4}{0133737624}   & \gamma_{xy}(t_1,t_2) &=& E(X_{t_1}Y_{t_2})
 \end{array}$
 
-Note that the \ope{expectation} operator $\pE\brp{\rvX\rvY}$ is an \fncte{inner product}.
+Note the following:
+\begin{enumerate}
+\item Depending on how we define $\Rxy(m)$ we can get several different results for $\Swxy(\omega)$:\label{item:RxySwxy}
+\\\rembox{\begin{array}{M >{\ds}rc>{\ds}l c >{\ds}rc>{\ds}l }
+    Papoulis:        & \Rxy(m) &\eqd& \pE\brs{\rvx     (m)\rvy^\ast(0)} &\implies& \Swxy(\omega) &=& \Fh^\ast( \omega)\Swxx(\omega)
+  \\Kay:             & \Rxy(m) &\eqd& \pE\brs{\rvx^\ast(0)\rvy     (m)} &\implies& \Swxy(\omega) &=& \Fh     ( \omega)\Swxx(\omega)
+  \\y-star-m:        & \Rxy(m) &\eqd& \pE\brs{\rvx     (0)\rvy^\ast(m)} &\implies& \Swxy(\omega) &=& \Fh^\ast(-\omega)\Swxx(\omega)
+  \\x-star-m:        & \Rxy(m) &\eqd& \pE\brs{\rvx^\ast(m)\rvy     (0)} &\implies& \Swxy(\omega) &=& \Fh     (-\omega)\Swxx(\omega)
+  \\Bendat:          & \Rxy(m) &\eqd& \pE\brs{\rvx     (0)\rvy     (m)} &\implies& \Swxy(\omega) &=& \Fh     ( \omega)\Swxx(\omega)
+  \\alt-Bendat:      & \Rxy(m) &\eqd& \pE\brs{\rvx     (m)\rvy     (0)} &\implies& \Swxy(\omega) &=& \Fh     (-\omega)\Swxx(\omega)
+  \\Bendat-star      & \Rxy(m) &\eqd& \pE\brs{\rvx^\ast(0)\rvy^\ast(m)} &\implies& \Swxy(\omega) &=& \Fh^\ast(-\omega)\Swxx(\omega)
+  \\alt-Bendat-star: & \Rxy(m) &\eqd& \pE\brs{\rvx^\ast(m)\rvy^\ast(0)} &\implies& \Swxy(\omega) &=& \Fh     (-\omega)\Swxx(\omega)
+\end{array}}.
+
+
+\item The \ope{expectation} operator $\pE\brp{\rvX\rvY^\ast}$ is an \fncte{inner product}.
 As such, it would seem the most natural to follow the convention of other inner product definitions
 and thus put the conjugate $\conj$ on $\rvy$ (i.e. follow Papoulis):
 \\\indentx$\begin{array}{c>{\ds}rc>{\ds}l}
     \imark & \inprod{\fx(t)}{\fy(t)} &\eqd& \int_{t\in\R} \fx(t)\fy^\conj(t) \dt
   \\\imark & \inprod{\fx(n)}{\fy(n)} &\eqd& \sum_{n\in\Z} \fx(n)\fy^\conj(n)
-  \\\imark & \inprod{\rvX}{\rvY}     &\eqq& \pE\brp{\rvX\rvY^\conj}
+  \\\imark & \inprod{\rvX}{\rvY}     &\eqd& \pE\brp{\rvX\rvY^\conj}
 \end{array}$
 
-However, if you follow Kay, then there is the advantage that you also end up with Bendat's result for $\Swxy(\omega)$, like this:
-\\\indentx$\begin{array}{M >{\ds}rc>{\ds}l c >{\ds}rc>{\ds}l }
-    Papoulis: & \Rxy(m) &=& \pE\brb{\rvx(m)\rvy^\ast(0)} &\implies& \Swxy(\omega) &=& \Fh^\ast(\omega)\Swxx(\omega)
-  \\Kay:      & \Rxy(m) &=& \pE\brb{\rvy(m)\rvx^\ast(0)} &\implies& \Swxy(\omega) &=& \Fh     (\omega)\Swxx(\omega)
-  \\Bendat:   & \Rxy(m) &=& \pE\brb{\rvx(m)\rvy     (0)} &\implies& \Swxy(\omega) &=& \Fh     (\omega)\Swxx(\omega)
-\end{array}$.
+\item However, if we follow Kay, then there is the advantage that you also end up with Bendat's result for $\Swxy(\omega)$.
 
+\item In the special case where $\rvx[n]$ and $\rvy[n]$ are \propb{real-valued} and by 
+      \prefpp{thm:dtft_conjneg_real}, \pref{item:RxySwxy} becomes
+\\\rembox{\begin{array}{M >{\ds}rc>{\ds}l c >{\ds}rc>{\ds}l }
+    Papoulis:        & \Rxy(m) &\eqd& \pE\brs{\rvx     (m)\rvy^\ast(0)} &\implies& \Swxy(\omega) &=& \Fh^\ast( \omega)\Swxx(\omega)
+  \\Kay:             & \Rxy(m) &\eqd& \pE\brs{\rvx^\ast(0)\rvy     (m)} &\implies& \Swxy(\omega) &=& \Fh     ( \omega)\Swxx(\omega)
+  \\y-star-m:        & \Rxy(m) &\eqd& \pE\brs{\rvx     (0)\rvy^\ast(m)} &\implies& \Swxy(\omega) &=& \Fh     ( \omega)\Swxx(\omega)
+  \\x-star-m:        & \Rxy(m) &\eqd& \pE\brs{\rvx^\ast(m)\rvy     (0)} &\implies& \Swxy(\omega) &=& \Fh^\ast( \omega)\Swxx(\omega)
+  \\Bendat:          & \Rxy(m) &\eqd& \pE\brs{\rvx     (0)\rvy     (m)} &\implies& \Swxy(\omega) &=& \Fh     ( \omega)\Swxx(\omega)
+  \\alt-Bendat:      & \Rxy(m) &\eqd& \pE\brs{\rvx     (m)\rvy     (0)} &\implies& \Swxy(\omega) &=& \Fh^\ast( \omega)\Swxx(\omega)
+  \\Bendat-star      & \Rxy(m) &\eqd& \pE\brs{\rvx^\ast(0)\rvy^\ast(m)} &\implies& \Swxy(\omega) &=& \Fh     ( \omega) \Swxx(\omega)
+  \\alt-Bendat-star: & \Rxy(m) &\eqd& \pE\brs{\rvx^\ast(m)\rvy^\ast(0)} &\implies& \Swxy(\omega) &=& \Fh^\ast( \omega) \Swxx(\omega)
+\end{array}}
+\end{enumerate}
 \end{remark}
 \begin{proof}
 \begin{enumerate}
-\item If you follow Papoulis, then\ldots
+\item If we follow Papoulis $\brp{\Rxy(m)\eqd\pE\brs{\rvx(m)\rvy^\ast(0)}}$, then\ldots \label{item:Rxy_papoulis}
   \begin{align*}
     \Swxy(\omega)
       &\eqd \opDTFT\pE\Rxy(m)
@@ -651,68 +678,200 @@ However, if you follow Kay, then there is the advantage that you also end up wit
       && \text{\xref{def:Swxy}}
     \\&\eqd \opDTFT\pE\brs{\rvx(m)\rvy^\ast(0)}
       && \text{by Papoulis' definition of $\Rxy(m)$}
-    \\&=    \opDTFT\pE\brs{\rvx(m-m)\rvy^\ast(0-m)}
-      && \text{by \prope{WSS} property}
-      && \text{\xref{def:wss}}
-    \\&=    \opDTFT\pE\brs{\rvx(0)\brp{\sum_{k\in\Z} \fh(k)           \rvx(-m-k)}^\ast}
+    \\&=    \opDTFT\pE\brs{\rvx(m)\brp{\sum_{k\in\Z} \fh(k)\rvx(0-k)}^\ast}
       && \text{by \prope{LTI} property}
-     %&& \text{\xref{thm:lti}}
-    \\&=    \opDTFT\pE\brs{\rvx(0)     \sum_{k\in\Z} \fh^\ast(k)      \rvx^\ast(-m-k)}
+    \\&=    \opDTFT\pE\brs{\rvx(m) \sum_{k\in\Z} \fh^\ast(k)      \rvx^\ast(0-k)}
       && \text{by \prope{distributive} property of \structd{$\invo$-algebra}s}
       && \text{\xref{def:staralg}}
-    \\&=    \opDTFT\pE\brs{            \sum_{k\in\Z} \fh^\ast(k)      \rvx(0)\rvx^\ast(-m-k)}
-    \\&=    \opDTFT                    \sum_{k\in\Z} \fh^\ast(k) \pE\brs{\rvx(0)\rvx^\ast(-m-k)}
-    \\&\eqd \opDTFT                    \sum_{k\in\Z} \fh^\ast(k) \Rxx(-m-k)
-    \\&\eqd \opDTFT                             \brs{\fh^\ast(m) \conv \Rxx(-m)}
+    \\&=    \opDTFT        \sum_{k\in\Z} \fh^\ast(k) \pE\brs{\rvx(m)\rvx^\ast(0-k)}
+    \\&=    \opDTFT        \sum_{k\in\Z} \fh^\ast(k) \pE\brs{\rvx(0)\rvx^\ast(-m-k)}
+      &&    \text{by \prope{wide sense stationary} property}
+    \\&=    \opDTFT        \sum_{k\in\Z} \fh^\ast(k) \brp{\pE\brs{\rvx(-m-k)\rvx^\ast(0)}}^\ast
+    \\&\eqd \opDTFT        \sum_{k\in\Z} \fh^\ast(k) \Rxx^\ast(-m-k)
+      && \text{by Papoulis' definition of $\Rxy(m)$}
+    \\&\eqd \opDTFT\brs{\fh^\ast(-m) \conv \Rxx^\ast(-m)}
       && \text{by definition of \ope{convolution}}
       && \text{\xref{def:conv}}
-    \\&=    \opDTFT                             \brs{\fh^\ast(-n) \conv \Rxx(n)}
-    \\&\eqd \Fh^\ast(\omega) \Swxx(\omega)
+    \\&=    \brs{\opDTFT\fh^\ast(-m)} \brs{\opDTFT\Rxx^\ast(-m)}
+      && \text{by \thme{convolution theorem}}
+      && \text{\xref{thm:conv}}
+    \\&\eqd \Fh^\ast(\omega) \Swxx^\ast(\omega)
+      && \text{by \prefp{thm:dtft_conjneg}}
+    \\&= \Fh^\ast(\omega) \Swxx(\omega)
+      && \text{because $\Swxx(\omega)$ is \prope{real-valued}}
   \end{align*}
 
-\item If you follow Kay, then\ldots
+\item If we follow Kay $\brp{\Rxy(m)\eqd\pE\brs{\rvx^\ast(0)\rvy(m)}}$, then\ldots
   \begin{align*}
     \Swxy(\omega)
-      &\eqd \opDTFT\pE\Rxy(m)
-    \\&\eqd \opDTFT\pE\brs{\rvy(m)                                 \rvx^\ast(0)}
+      &\eqd \opDTFT\Rxy(m)
+      && \text{by definition of $\Swxy(\omega)$}
+      && \text{\xref{def:Swxy}}
+    \\&\eqd \opDTFT\pE\brs{\rvy(m)\rvx^\ast(0)}
+      && \text{by Kay's definition of $\Rxy(m)$}
     \\&=    \opDTFT\pE\brs{\brp{\fh(m)\conv\rvx(m)}                \rvx^\ast(0)}
-    \\&=    \opDTFT\pE\brs{\brp{\sum_{k\in\Z} \fh(k)\rvx^\ast(m-k)}\rvx^\ast(0)}
-    \\&=    \opDTFT\brp{\sum_{k\in\Z} \fh(k)\pE\brs{\rvx^\ast(m-k)\rvx^\ast(0)}}
-    \\&=    \opDTFT\brp{\sum_{k\in\Z} \fh(k)\Rxx(m-k)}
+      && \text{by \prope{LTI} property}
+      && \text{\xref{thm:conv}}
+    \\&=    \opDTFT\pE\brs{\brp{\sum_{k\in\Z} \fh(k)\rvx(m-k)}\rvx^\ast(0)}
+    \\&=    \opDTFT\brp{\sum_{k\in\Z} \fh(k)\pE\brs{\rvx(m-k)\rvx^\ast(0)}}
+      && \text{by \prope{linearity} of $\sum$}
+    \\&\eqd \opDTFT\brp{\sum_{k\in\Z} \fh(k)\Rxx(m-k)}
+      && \text{by Kay's definition of $\Rxy(m)$}
     \\&\eqd \opDTFT\brp{\fh(m)\conv\Rxx(m)}
-    \\&=    \opDTFT\brp{\fh(m)\conv\Rxx(m)}
-    \\&=    \brs{\opDTFT\fh(m)} \brs{\opDTFT\Rxx(m)}
+      && \text{by definition of \ope{convolution}}
+      && \text{\xref{def:conv}}
+    \\&=    \brs{\opDTFT\fh(m)}\brs{\opDTFT\Rxx(m)}
     \\&\eqd \Fh(\omega) \Swxx(\omega)
+      && \text{by definitions of $\Fh(\omega)$ and $\Swxx(\omega)$}
+      && \text{\xref{def:dtft}}
   \end{align*}
 
-\item If you follow Bendat (or assume $\rvX(n)$ and $\rvY(n)$ are \prope{real-valued}, then\ldots
+\item For y-star-m $\brp{\Rxy(m)\eqd\pE\brs{\rvx(0)\rvy^\ast(m)}}$ \ldots \label{item:Rxy_ystarm}
   \begin{align*}
     \Swxy(\omega)
       &\eqd \opDTFT\pE\Rxy(m)
-    \\&\eqd \opDTFT\pE\brs{\rvx(0)\rvy(m)}
-    \\&=    \opDTFT\pE\brs{\rvx(0)\brp{\sum_{k\in\Z} \fh(k) \rvx(m-k)}}
-    \\&=    \opDTFT\pE\brs{\rvx(0)     \sum_{k\in\Z} \fh(k) \rvx(m-k)}
-    \\&=    \opDTFT\pE\brs{            \sum_{k\in\Z} \fh(k) \rvx(0)\rvx(m-k)}
-    \\&=    \opDTFT                    \sum_{k\in\Z} \fh(k) \pE\brs{\rvx(0)\rvx(m-k)}
-    \\&\eqd \opDTFT                    \sum_{k\in\Z} \fh(k) \Rxx(m-k)
-    \\&\eqd \opDTFT                             \brs{\fh(m) \conv \Rxx(m)}
-    \\&\eqd \Fh(\omega) \Swxx(\omega)
-  \end{align*}
-
-\item If you want to show your individuality and/or creativity, then you might try \ldots
-  \begin{align*}
-    \Swxy(\omega)
-      &\eqd \opDTFT\pE\Rxy(m)
+      && \text{by definition of $\Swxy(\omega)$}
+      && \text{\xref{def:Swxy}}
     \\&\eqd \opDTFT\pE\brs{\rvx(0)\rvy^\ast(m)}
-    \\&=    \opDTFT\pE\brs{\rvx(0)\brp{\sum_{k\in\Z} \fh(k)           \rvx(m-k)}^\ast}
-    \\&=    \opDTFT\pE\brs{\rvx(0)     \sum_{k\in\Z} \fh^\ast(k)      \rvx^\ast(m-k)}
-    \\&=    \opDTFT\pE\brs{            \sum_{k\in\Z} \fh^\ast(k)      \rvx(0)\rvx^\ast(m-k)}
-    \\&=    \opDTFT                    \sum_{k\in\Z} \fh^\ast(k) \pE\brs{\rvx(0)\rvx^\ast(m-k)}
+      && \text{by \pref{item:Rxy_ystarm} definition of $\Rxy(m)$}
+    \\&=    \opDTFT\pE\brs{\rvx(0)\brp{\sum_{k\in\Z} \fh(k)\rvx(m-k)}^\ast}
+      && \text{by \prope{LTI} property}
+    \\&=    \opDTFT\pE\brs{\rvx(0) \sum_{k\in\Z} \fh^\ast(k)      \rvx^\ast(m-k)}
+      && \text{by \prope{distributive} property of \structd{$\invo$-algebra}s}
+      && \text{\xref{def:staralg}}
+    \\&=    \opDTFT        \sum_{k\in\Z} \fh^\ast(k) \pE\brs{\rvx(0)\rvx^\ast(m-k)}
+    \\&\eqd \opDTFT        \sum_{k\in\Z} \fh^\ast(k) \Rxx^\ast(m-k)
+      && \text{by \pref{item:Rxy_ystarm} definition of $\Rxy(m)$}
+    \\&\eqd \opDTFT\brs{\fh(m) \conv \Rxx^\ast(m)}
+      && \text{by definition of \ope{convolution}}
+      && \text{\xref{def:conv}}
+    \\&=    \brs{\opDTFT\fh^\ast(m)} \brs{\opDTFT\Rxx^\ast(m)}
+      && \text{by \thme{convolution theorem}}
+      && \text{\xref{thm:conv}}
+    \\&\eqd \Fh(\omega) \Swxx(\omega)
+      && \text{by definition of \ope{DTFT}}
+      && \text{\xref{def:dtft}}
+  \end{align*}
+
+\item For x-star-m $\brp{\Rxy(m)\eqd\pE\brs{\rvx^\ast(m)\rvy(0)}}$ \ldots \label{item:Rxy_xstarm}
+  \begin{align*}
+    \Swxy(\omega)
+      &\eqd \opDTFT\pE\Rxy(m)
+      && \text{by definition of $\Swxy(\omega)$}
+      && \text{\xref{def:Swxy}}
+    \\&\eqd \opDTFT\pE\brs{\rvx^\ast(m)\rvy(0)}
+      && \text{by \pref{item:Rxy_xstarm} definition of $\Rxy(m)$}
+    \\&=    \opDTFT\pE\brs{\rvx^\ast(m)\sum_{k\in\Z} \fh(k)           \rvx(0-k)}
+      && \text{by prope{LTI} property}
+    \\&=    \opDTFT\sum_{k\in\Z} \fh(k)\pE\brs{\rvx^\ast(m)\rvx(0-k)}
+      && \text{by \prope{linearity} of $\sum$}
+    \\&=    \opDTFT\sum_{k\in\Z} \fh(k)\pE\brs{\rvx^\ast(m+k)\rvx(0)}
+      && \text{by \prope{wide sense stationary} property}
+      && \text{\xref{def:wss}}
+    \\&=    \opDTFT\sum_{k\in\Z} \fh(k)\Rxx(m+k)
+      && \text{by \pref{item:Rxy_xstarm} definition of $\Rxy(m)$}
+    \\&=    \opDTFT\sum_{k'\in\Z} \fh(-k')\Rxx(m-k')
+      && \text{where $k'\eqd k$}
+    \\&\eqd \opDTFT\brs{\fh(-m) \conv \Rxx(m)}
+      && \text{by definition of \ope{convolution}}
+      && \text{\xref{def:conv}}
+    \\&\eqd \brs{\opDTFT\fh(-m)} \brs{\opDTFT\Rxx(m)}
+      && \text{by \thme{convolution theorem}}
+      && \text{\xref{thm:conv}}
+    \\&\eqd \Fh(-\omega) \Swxx(\omega)
+      && \text{by \prefp{thm:dtft_conjneg}}
+  \end{align*}
+
+\item If we follow Bendat $\brp{\Rxy(m)\eqd\pE\brs{\rvx(0)\rvy(m)}}$, then\ldots \label{item:Rxy_bendat}
+  \begin{align*}
+    \Swxy(\omega)
+      &\eqd \opDTFT\pE\Rxy(m)
+      && \text{by definition of $\Swxy(\omega)$}
+      && \text{\xref{def:Swxy}}
+    \\&\eqd \opDTFT\pE\brs{\rvx(0)\rvy(m)}
+      && \text{by Bendat's definition of $\Rxy(m)$}
+    \\&=    \opDTFT\pE\brs{\rvx(0)\brp{\sum_{k\in\Z} \fh(k) \rvx(m-k)}}
+      && \text{by \prope{LTI} property}
+    \\&=    \opDTFT                    \sum_{k\in\Z} \fh(k) \pE\brs{\rvx(0)\rvx(m-k)}
+      && \text{by \prope{linearity} of $\sum$}
+    \\&\eqd \opDTFT                    \sum_{k\in\Z} \fh(k) \Rxx(m-k)
+      && \text{by Bendat's definition of $\Rxy(m)$}
+    \\&\eqd \opDTFT\brs{\fh(m) \conv \Rxx(m)}
+    \\&\eqd \Fh(\omega) \Swxx(\omega)
+  \end{align*}
+
+\item For alt-Bendat $\brp{\Rxy(m)\eqd\pE\brs{\rvx(m)\rvy(0)}}$ \ldots \label{item:Rxy_bendatalt}
+  \begin{align*}
+    \Swxy(\omega)
+      &\eqd \opDTFT\pE\Rxy(m)
+      && \text{by definition of $\Swxy(\omega)$}
+      && \text{\xref{def:Swxy}}
+    \\&\eqd \opDTFT\pE\brs{\rvx(m)\rvy(0)}
+      && \text{by \pref{item:Rxy_bendatalt} definition of $\Rxy(m)$}
+    \\&=    \opDTFT\pE\brs{\rvx(m)\brp{\sum_{k\in\Z} \fh(k) \rvx(0-k)}}
+      && \text{by \prope{LTI} property}
+    \\&=    \opDTFT\sum_{k\in\Z} \fh(k) \pE\brs{\rvx(m)\rvx(-k)}
+      && \text{by \prope{linearity} of $\sum$}
+    \\&=    \opDTFT\sum_{k\in\Z} \fh(k) \pE\brs{\rvx(0)\rvx(-m-k)}
+      && \text{by \prope{wide sense stationary} property}
+      && \text{\xref{def:wss}}
+    \\&=    \opDTFT\sum_{k\in\Z} \fh(k) \pE\brs{\rvx(-m-k)\rvx(0)}
+      && \text{by \prope{commutative} property}
+    \\&\eqd \opDTFT                    \sum_{k\in\Z} \fh(k) \Rxx(-m-k)
+      && \text{by \pref{item:Rxy_bendatalt} definition of $\Rxy(m)$}
+    \\&\eqd \opDTFT\brs{\fh(-m) \conv \Rxx(-m)}
+      && \text{by definition of \ope{convolution} operation}
+      && \text{\xref{def:conv}}
+    \\&\eqd \opDTFT\brs{\fh(-m) \conv \Rxx(m)}
+      && \text{by \prefp{cor:Rxxm}}
+    \\&\eqd \Fh(-\omega) \Swxx(\omega)
+  \end{align*}
+
+\item For Bendat-star $\brp{\Rxy(m)\eqd\pE\brs{\rvx^\ast(0)\rvy^\ast(m)}}$, then\ldots \label{item:Rxy_bendat-star}
+  \begin{align*}
+    \Swxy(\omega)
+      &\eqd \opDTFT\pE\Rxy(m)
+      && \text{by definition of $\Swxy(\omega)$}
+      && \text{\xref{def:Swxy}}
+    \\&\eqd \opDTFT\pE\brs{\rvx^\ast(0)\rvy^\ast(m)}
+      && \text{by Bendat-star definition of $\Rxy(m)$}
+    \\&=    \opDTFT\pE\brs{\rvx^\ast(0)\rvy^\ast(m)}
+    \\&=    \opDTFT\pE\brs{\rvx^\ast(0)\brp{\sum_{k\in\Z} \fh(k) \rvx(m-k)}^\ast}
+      && \text{by \prope{LTI} property}
+    \\&=    \opDTFT                    \sum_{k\in\Z} \fh^\ast(k) \pE\brs{\rvx^\ast(0)\rvx^\ast(m-k)}
+      && \text{by \prope{linearity} of $\sum$}
     \\&\eqd \opDTFT                    \sum_{k\in\Z} \fh^\ast(k) \Rxx(m-k)
-    \\&\eqd \opDTFT                             \brs{\fh^\ast(m) \conv \Rxx(m)}
+      && \text{by Bendat-star definition of $\Rxy(m)$}
+    \\&\eqd \opDTFT\brs{\fh^\ast(m) \conv \Rxx(m)}
     \\&\eqd \Fh^\ast(-\omega) \Swxx(\omega)
   \end{align*}
 
+\item For alt-Bendat-star $\brp{\Rxy(m)\eqd\pE\brs{\rvx^\ast(m)\rvy^\ast(0)}}$ \ldots \label{item:Rxy_bendatalt}
+  \begin{align*}
+    \Swxy(\omega)
+      &\eqd \opDTFT\pE\Rxy(m)
+      && \text{by definition of $\Swxy(\omega)$}
+      && \text{\xref{def:Swxy}}
+    \\&\eqd \opDTFT\pE\brs{\rvx^\ast(m)\rvy^\ast(0)}
+      && \text{by \pref{item:Rxy_bendatalt} definition of $\Rxy(m)$}
+    \\&=    \opDTFT\pE\brs{\rvx^\ast(m)\brp{\sum_{k\in\Z} \fh^\ast(k) \rvx^\ast(0-k)}}
+      && \text{by \prope{LTI} property}
+    \\&=    \opDTFT\sum_{k\in\Z} \fh^\ast(k) \pE\brs{\rvx^\ast(m)\rvx^\ast(-k)}
+      && \text{by \prope{linearity} of $\sum$}
+    \\&=    \opDTFT\sum_{k\in\Z} \fh^\ast(k) \pE\brs{\rvx^\ast(0)\rvx^\ast(-m-k)}
+      && \text{by \prope{wide sense stationary} property}
+      && \text{\xref{def:wss}}
+    \\&=    \opDTFT\sum_{k\in\Z} \fh^\ast(k) \pE\brs{\rvx^\ast(-m-k)\rvx^\ast(0)}
+      && \text{by \prope{commutative} property}
+    \\&\eqd \opDTFT                    \sum_{k\in\Z} \fh^\ast(k) \Rxx^\ast(-m-k)
+      && \text{by \pref{item:Rxy_bendatalt} definition of $\Rxy(m)$}
+    \\&\eqd \opDTFT\brs{\fh(-m) \conv \Rxx^\ast(-m)}
+      && \text{by definition of \ope{convolution} operation}
+      && \text{\xref{def:conv}}
+    \\&\eqd \opDTFT\brs{\fh(-m) \conv \Rxx(m)}
+      && \text{by \prefp{cor:Rxxm}}
+    \\&\eqd \Fh(-\omega) \Swxx(\omega)
+  \end{align*}
 \end{enumerate}
 \end{proof}
 
