--- a/common/laplace.tex
+++ b/common/laplace.tex
@@ -262,8 +262,7 @@ and the \structe{Region of Convergence} of $\fF(s)$ be $C\leq\Real(s)\leq D$.
 %--------------------------------------
 \begin{corollary}
 \footnote{
-  \citerpgc{bracewell1978}{224}{007007013X}{Table 11.1 Theorems for the Laplace Transform},
-  \citerpgc{shafii2015}{3}{9780738672458}{Table 1, using One-Sided Laplace Transform}
+  \citerpgc{bracewell1978}{224}{007007013X}{Table 11.1 Theorems for the Laplace Transform}
   }
 \label{cor:opLT_mod}
 %--------------------------------------
@@ -280,59 +279,11 @@ Let the \structe{Region of Convergence} of $\fG(s)$ be $A\leq\Real(s)\leq B$.
 \end{corollary}
 \begin{proof}
 \begin{align*}
-  &\opLT\brs{\cos\brp{\omega_o x} \fg(x)}
-  \\&=\mathrlap{
-       \opLT\brs{\brp{\frac{e^{i\omega_o x} + e^{-i\omega_o x}}{2}} \fg(x)}
-        \qquad\forall \Real(s)\in\intcc{A-\Real(-i\omega_o)}{B-\Real(i\omega_o)}
-        \qquad\text{by \thme{Euler formulas} \xref{cor:eform}}
-        }
-  \\&=     \frac{1}{2}\opLT\brs{e^{ i\omega_o x} \fg(x)}(s)
-         + \frac{1}{2}\opLT\brs{e^{-i\omega_o x} \fg(x)}(s)
-        && \forall \Real(s)\in\intcc{A-0}{B-0}
-        && \text{by \prope{additive} property}
-        && \text{\xref{thm:opLT_linear}}
-  \\&=     \frac{1}{2}\opLT\brs{\fg(x)}(s-i\omega)
-         + \frac{1}{2}\opLT\brs{\fg(x)}(s+i\omega)
-        && \forall \Real(s)\in\intcc{A}{B}
-        && \text{by \prope{modulation} prop.}
-        && \text{\xref{thm:opLT_mod}}
-  \\&=   \frac{1}{2}\fG(s-i\omega_o) + \frac{1}{2}\fG(s+i\omega_o)
-        && \forall \Real(s)\in\intcc{A}{B}
-        && \text{by definition of $\fG(s)$}
-        &&
-  %      && \forall \Real(s)\in\intcc{A}{B}
-  \\
-  \\
-  &\opLT\brs{\sin\brp{\omega_o x} \fg(x)}
-  \\&=\mathrlap{
-        \opLT\brs{\brp{\frac{e^{i\omega_o x} - e^{-i\omega_o x}}{2i}} \fg(x)}
-        \qquad\forall \Real(s)\in\intcc{A-\Real(-i\omega_o)}{B-\Real(i\omega_o)}
-        \qquad\text{by \thme{Euler formulas} \xref{cor:eform}}
-        }
-  \\&=     \frac{1}{2i}\opLT\brs{e^{ i\omega_o x} \fg(x)}(s)
-         - \frac{1}{2i}\opLT\brs{e^{-i\omega_o x} \fg(x)}(s)
-        && \forall \Real(s)\in\intcc{A-0}{B-0}
-        && \text{by \prope{additive} property}
-        && \text{\xref{thm:opLT_linear}}
-  \\&=     \frac{1}{2i}\opLT\brs{\fg(x)}(s-i\omega)
-         - \frac{1}{2i}\opLT\brs{\fg(x)}(s+i\omega)
-        && \forall \Real(s)\in\intcc{A}{B}
-        && \text{by \prope{modulation} prop.}
-        && \text{\xref{thm:opLT_mod}}
-  \\&=    -\frac{i}{2}\opLT\brs{\fg(x)}(s-i\omega)
-          +\frac{i}{2}\opLT\brs{\fg(x)}(s+i\omega)
-        && \forall \Real(s)\in\intcc{A}{B}
-  \\&=   -\frac{i}{2}\fG(s-i\omega_o) + \frac{i}{2}\fG(s+i\omega_o)
-        && \forall \Real(s)\in\intcc{A}{B}
-        && \text{by definition of $\fG(s)$}
-        &&
-  \\
-  \\
   &\opLT\brs{\cosh\brp{\omega_o x} \fg(x)}
   \\&=\mathrlap{
        \opLT\brs{\brp{\frac{e^{\omega_o x} + e^{-\omega_o x}}{2}} \fg(x)}
-        \qquad\forall \Real(s)\in\intcc{A-\Real(-\omega_o)}{B-\Real(\omega_o)}
-        \qquad\text{by definition of $\cosh(x)$ \xref{def:cosh}}
+        \quad\forall \Real(s)\in\intcc{A-\Real(-\omega_o)}{B-\Real(\omega_o)}
+        \quad\text{by definition of $\cosh(x)$ \xref{def:cosh}}
         }
   \\&=     \frac{1}{2}\opLT\brs{e^{ \omega_o x} \fg(x)}(s)
          + \frac{1}{2}\opLT\brs{e^{-\omega_o x} \fg(x)}(s)
@@ -353,8 +304,8 @@ Let the \structe{Region of Convergence} of $\fG(s)$ be $A\leq\Real(s)\leq B$.
   &\opLT\brs{\sinh\brp{\omega_o x} \fg(x)}
   \\&=\mathrlap{
        \opLT\brs{\brp{\frac{e^{\omega_o x} - e^{-\omega_o x}}{2}} \fg(x)}
-        \qquad\forall \Real(s)\in\intcc{A-\Real(-\omega_o)}{B-\Real(\omega_o)}
-        \qquad\text{by definition of $\sinh(x)$ \xref{def:sinh}}
+        \quad\forall \Real(s)\in\intcc{A-\Real(-\omega_o)}{B-\Real(\omega_o)}
+        \quad\text{by definition of $\sinh(x)$ \xref{def:sinh}}
         }
   \\&=     \frac{1}{2}\opLT\brs{e^{ \omega_o x} \fg(x)}(s)
          - \frac{1}{2}\opLT\brs{e^{-\omega_o x} \fg(x)}(s)
@@ -370,6 +321,29 @@ Let the \structe{Region of Convergence} of $\fG(s)$ be $A\leq\Real(s)\leq B$.
         && \forall \Real(s)\in\intcc{A}{B}
         && \text{by definition of $\fG(s)$}
         &&
+\end{align*}
+
+\begin{align*}
+  \opLT\brs{\cos\brp{\omega_o x} \fg(x)}
+    &= \opLT\brs{\cosh\brp{i\omega_o x} \fg(x)}
+    && 
+    && \text{by \prefp{thm:cosh}}
+  \\&=  \frac{1}{2}\fG(s-i\omega_o) + \frac{1}{2}\fG(s+i\omega_o)
+    && \forall \Real(s)\in\intcc{A}{B}
+    && \text{by $\opLT\brs{\cos(\omega_o x)\fg(x)}$ result}
+  \\
+  \\
+  \opLT\brs{\sin\brp{\omega_o x} \fg(x)}
+    &= \opLT\brs{-i^2\sin\brp{\omega_o x} \fg(x)}
+  \\&= -i\opLT\brs{i\sin\brp{\omega_o x} \fg(x)}
+    && \text{by \prope{homogeneous} property}
+    && \text{\xref{thm:opLT_linear}}
+  \\&= -i\opLT\brs{\sinh\brp{i\omega_o x} \fg(x)}
+    &&
+    && \text{by \prefp{thm:sinh}}
+  \\&=  -\frac{i}{2}\fG(s-i\omega_o) + \frac{i}{2}\fG(s+i\omega_o)
+    && \forall \Real(s)\in\intcc{A}{B}
+    && \text{by $\opLT\brs{\sin(\omega_o x)\fg(x)}$ result}
 \end{align*}
 \end{proof}
 
